Changed designs, added appointment

--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a>
+      <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -19,8 +19,8 @@
             <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
-         
-         
+
+
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
@@ -61,17 +61,17 @@
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-      
+
     </div>
   </nav>
 </div>
 
-<section class="log-div">
-  <!-- style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;" -->
+<section class="log-div" style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; backdrop-filter: blur(5px); ">
+
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px);">
+        <div class="card  mx-auto" style="border-radius: 1rem; background-color: rgba(153, 155, 150, 0.3); backdrop-filter: blur(10px); width: 80%; ">
           <div class="row g-0">
 
             <!-- Image -->
@@ -88,25 +88,25 @@
 
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h2 fw-bold mb-0" style="color: rgb(5, 15, 60);">Log In Page</span>
+                    <span class="h2 fw-bold mb-0" style="color: #fcfeff;">LOG IN</span>
                   </div>
 
                   <!-- <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Login into your account</h5> -->
 
-                  <div data-mdb-input-init class="form-outline mb-4">
+                  <div data-mdb-input-init class="form-outline mb-4"  style="color : white;">
                     <label for="email" class="col-sm-3 col-form-label">Email:</label>
                     <div class="col-sm-9" id="inputfield">
-                        <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
+                        <input type="email" class="form-control form-select-lg input-outline" id="email" formControlName="email" placeholder="Email">
                         <div *ngIf="isInvalid('email')" class="text-danger">
                             {{ getErrorMessage('email') }}
                         </div>
                     </div>
                   </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <label for="password" class="col-sm-3 col-form-label" >Password:</label>
+                  <div data-mdb-input-init class="form-outline mb-4" style="color : white;">
+                    <label for="password" class="col-sm-3 col-form-label " >Password:</label>
                     <div class="col-sm-9" id="inputfield">
-                        <input type="password" class="form-control form-select-lg" id="password" formControlName="password" placeholder="password">
+                        <input type="password" class="form-control form-select-lg input-outline" id="password" formControlName="password" placeholder="Password">
                         <div *ngIf="isInvalid('password')" class="text-danger">
                             {{ getErrorMessage('password') }}
                         </div>
@@ -114,17 +114,17 @@
                     </div>
                   </div>
 
-                  <div class="form-outline mb-4">
-                    <label for="idName" class="col-sm-3 col-form-label">Role Id:</label>
+                  <div class="form-outline mb-4" style="color : white;">
+                    <label for="idName" class="col-sm-3 col-form-label" >Role Id:</label>
                     <div class="row">
                     <div class="col-3">
-                      <select class="form-select" id="idName" id="drop" formControlName="idName" placeholder="Select">
+                      <select class="form-select input-outline" id="idName" id="drop" formControlName="idName" placeholder="Select">
                         <option value="EMP" selected>EMP</option>
                         <option value="GRAD">GRAD</option>
                       </select>
 
                       </div>
-                      <input type="text" class="form-control col-sm-3 w-20" formControlName="roleId" name="roleId" id="roleId" placeholder="Enter the ID">
+                      <input type="text" class="form-control col-sm-3 w-20 input-outline" formControlName="roleId" name="roleId" id="roleId" placeholder="Enter the ID">
 
                     </div>
                     <div *ngIf="isInvalid('roleId')" class="text-danger">
@@ -138,12 +138,12 @@
 
 
 
-                  <div class="pt-1 mb-4">
+                  <div class="pt-1 mb-4" style="color : white;">
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary w-50" type="submit" [disabled]="loginForm.invalid">Login</button>
                   </div>
 
-                  <a class="large text-muted" routerLink="/forgotpassword">Forgot password?</a>
-                  <p class="mb-5 pb-lg-2"style="color: rgb(5, 15, 60);">Don't have an account? <a routerLink="/register" style="color: rgb(5, 15, 60);">Register here</a></p>
+                  <a class="" routerLink="/forgotpassword" style="color : rgb(14, 1, 1); font-weight:600; text-decoration:none;">Forgot password?</a>
+                  <p class="mb-5 pb-lg-2"style="color: rgb(5, 15, 60);" style="color : rgb(246, 243, 243);">Don't have an account? <a routerLink="/register" style="color: rgb(5, 15, 60); color : rgb(14, 1, 1); text-decoration : none; font-weight:600;">Register here</a></p>
                 </form>
               </div>
             </div>
