--- a/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.html
@@ -19,8 +19,8 @@
             <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
-         
-         
+
+
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
@@ -61,7 +61,7 @@
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-      
+
     </div>
   </nav>
 </div>
@@ -175,7 +175,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
 
 
 
-<section class="regDiv">
+<section class="regDiv" style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; backdrop-filter: blur(5px); ">
   <!-- style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;" -->
   <div class="container py-5 h-50">
     <!-- h-100 -->
@@ -199,7 +199,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   <div class="form-outline mb-2">
                     <label for="name" class="col-sm-3 col-form-label">Full Name:</label>
                                     <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="name" formControlName="name" placeholder="Full Name">
+                                        <input type="text" class="form-control form-select-lg input-outline" id="name" formControlName="name" placeholder="Full Name">
                                         <div *ngIf="isInvalid('name')" class="text-danger">
                                             {{ getErrorMessage('name') }}
                                         </div>
@@ -208,7 +208,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   <div class="form-outline mb-2">
                     <label for="address" class="col-sm-3 col-form-label">Address:</label>
                                     <div class="col-sm-9" id="inputfield">
-                                        <input type="textarea" class="form-control form-select-lg" id="address" formControlName="address" placeholder="Address">
+                                        <input type="textarea" class="form-control form-select-lg input-outline" id="address" formControlName="address" placeholder="Address">
                                         <div *ngIf="isInvalid('address')" class="text-danger">
                                             {{ getErrorMessage('address') }}
                                         </div>
@@ -217,7 +217,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   <div class="form-outline mb-2">
                     <label for="email" class="col-sm-3 col-form-label">Email:</label>
                                     <div class="col-sm-9" id="inputfield">
-                                        <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
+                                        <input type="email" class="form-control form-select-lg input-outline" id="email" formControlName="email" placeholder="Email">
                                         <div *ngIf="isInvalid('email')" class="text-danger">
                                             {{ getErrorMessage('email') }}
                                         </div>
@@ -227,7 +227,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   <div class="form-outline mb-2">
                     <label for="phone" class="col- col-form-label">Phone:</label>
                                     <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg" id="phone" formControlName="phone" placeholder="Phone Number">
+                                        <input type="text" class="form-control form-select-lg input-outline" id="phone" formControlName="phone" placeholder="Phone Number">
                                         <div *ngIf="isInvalid('phone')" class="text-danger">
                                             {{ getErrorMessage('phone') }}
                                         </div>
@@ -236,7 +236,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   <div class="form-outline mb-2">
                     <label for="password" class="col-sm-3 col-form-label" >Password:</label>
                                     <div class="col-sm-9" id="inputfield">
-                                        <input type="password" class="form-control form-select-lg" id="password" formControlName="password" placeholder="password">
+                                        <input type="password" class="form-control form-select-lg input-outline" id="password" formControlName="password" placeholder="password">
                                         <div *ngIf="isInvalid('password')" class="text-danger">
                                             {{ getErrorMessage('password') }}
                                         </div>
@@ -246,7 +246,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
                   <div class="form-outline mb-2">
                     <label for="confirmpassword" class="col-sm-3 col-form-label">Confirm Password:</label>
                     <div class="col-sm-9" id="inputfield">
-                      <input type="password" class="form-control form-select-lg" id="confirmpassword" formControlName="confirmpassword" placeholder="Re Enter Password">
+                      <input type="password" class="form-control form-select-lg input-outline" id="confirmpassword" formControlName="confirmpassword" placeholder="Re Enter Password">
                       <div *ngIf="registrationForm && registrationForm.get('confirmpassword')?.invalid && (registrationForm.get('confirmpassword')?.dirty || registrationForm.get('confirmpassword')?.touched)" class="text-danger">
                         {{ getErrorMessage('confirmpassword') }}
                       </div>
@@ -257,7 +257,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
 
                   <div class="form-outline mb-2">
                     <label for="nationality" class="form-label" id="inputfield">Nationality:</label>
-                    <select id="nationality" formControlName="nationality" class="form-select form-select-lg" aria-placeholder="Select Nationality" required>
+                    <select id="nationality" formControlName="nationality" class="form-select form-select-lg input-outline" aria-placeholder="Select Nationality" required>
                       <option value=""  disabled selected>Select Nationality</option>
                       <option *ngFor="let nationality of nationalities" [value]="nationality">{{nationality}}</option>
                     </select>
@@ -268,7 +268,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
 
                   <div class="form-outline mb-2">
                     <label for="signas" class="form-label" id="inputfield">Sign As:(Role)</label>
-                    <select id="signas" formControlName="signas" class="form-select form-select-lg" aria-placeholder="signas" required>
+                    <select id="signas" formControlName="signas" class="form-select form-select-lg input-outline" aria-placeholder="signas" required>
                       <option value=""  disabled selected>Select Role </option>
                       <option value="graduate">Graduate</option>
                       <option value="employer">Employer</option>
