--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.css
@@ -6,6 +6,11 @@ height: 1px;
 background: #eee;
 }
 
+.input-outline{
+  border: 1px solid #050e17; /* Change the color as needed */
+  border-radius: 0.25rem;
+}
+
 #drop{
     width: 100px;
 }
