--- a/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.css
@@ -1,5 +1,11 @@
 #inputfield{
     width: 100%;
+    /* outline: 2px; */
+}
+
+.input-outline{
+  border: 1px solid #050e17; /* Change the color as needed */
+  border-radius: 0.25rem;
 }
 .reg-div
 {
